--- a/ebay/Views/Shared/_Layout.cshtml
+++ b/ebay/Views/Shared/_Layout.cshtml
@@ -35,6 +35,8 @@
 </head>
 <body>
     <script src="/assets/dist/js/demo-theme.min.js?1684106062"></script>
+    <script src="https://cdn.tiny.cloud/1/tlo0fc3dqgnj93zvninaq1w9svfr2amqze5npsw3vahp99iw/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+
     <div class="page">
         <!-- Navbar -->
         <header class="navbar navbar-expand-md d-print-none">
@@ -1353,6 +1355,7 @@
       // @@formatter:on
     </script>
     <script src="~/lib/jquery/dist/jquery.js"></script>
+
      @await Component.InvokeAsync("Notyf")
      </body>
 </html>
