--- a/ebay/Areas/Admin/Views/Product/Edit.cshtml
+++ b/ebay/Areas/Admin/Views/Product/Edit.cshtml
@@ -17,9 +17,8 @@
             </select>
         </div>
         <div class="mb-3 row">
-            <label asp-for="Description" class="form-label"></label>
-            <input asp-for="Description" class="form-control">
-            <span asp-validation-for="Description" class="text-danger"></span>
+            <label asp-for="Description" class="form-lable"></label>
+            <textarea asp-for="Description" class="form-label"></textarea>
             <div class="mb-3 row">
                 <label asp-for="Brand" class="form-label"></label>
                 <input asp-for="Brand" class="form-control">
@@ -27,7 +26,7 @@
             </div>
             <div class="mb-3 row">
                 <label asp-for="Price" class="form-label"></label>
-                <input asp-for="Price" class="form-control" >
+                <input asp-for="Price" class="form-control">
                 <span asp-validation-for="Price" class="text-danger"></span>
                 <div class="mb-3 row">
                     <label asp-for="Stock" class="form-label"></label>
@@ -53,3 +52,18 @@
 
     </form>
 </div>
+
+<script>
+    tinymce.init({
+        selector: 'textarea',
+        plugins: 'ai tinycomments mentions anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed permanentpen footnotes advtemplate advtable advcode editimage tableofcontents mergetags powerpaste tinymcespellchecker autocorrect a11ychecker typography inlinecss',
+        toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | align lineheight | tinycomments | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+        tinycomments_mode: 'embedded',
+        tinycomments_author: 'Author name',
+        mergetags_list: [
+            { value: 'First.Name', title: 'First Name' },
+            { value: 'Email', title: 'Email' },
+        ],
+        ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant")),
+    });
+</script>
