--- a/ebay/Areas/Admin/Views/Product/Index.cshtml
+++ b/ebay/Areas/Admin/Views/Product/Index.cshtml
@@ -11,7 +11,6 @@
                         <div class="row">
                             <div class="form-group col-auto mr-auto d-flex justify-content-right">
                                 <input asp-for="Name" type="text" placeholder="e.g. Iphone" class="form-control ">
-
                             </div>
                             <div class="form-group col-auto mr-auto d-flex justify-content-center">
                                 <button class="btn btn-primary">
@@ -106,12 +105,17 @@
                                             </div>
                                         </td>
                                         <td>
-                                            <strong>@data.Name</strong>
+                                            <strong class="d-inline-block text-truncate" style="max-width: 150px;">@data.Name</strong>
                                         </td>
 
+                                           
                                         <td class="w-25">
-                                            @data.Description
+                                            
+
+                                            @Html.Raw(data.Description)
+                                            
                                         </td>
+                                            
                                         <td>
                                             @data.Price
                                         </td>
