--- a/ebay/Areas/Public/Views/Public/Index.cshtml
+++ b/ebay/Areas/Public/Views/Public/Index.cshtml
@@ -134,7 +134,7 @@ velit imperdiet dolor tempor tristique. </p>
 						</div>
 						<div class="card-body">
 							<div class="pl-1">
-								<h3 class="product-title">@product.Name</h3>
+								<h3 class="product-title col-12 text-truncate">@product.Name</h3>
 								<strong class="product-price">$@product.Price</strong>
 								<span class="icon-cross">
 									<img src="/Public/images/cross.svg" class="img-fluid">
