--- a/ebay/wwwroot/Public/css/style.css
+++ b/ebay/wwwroot/Public/css/style.css
@@ -27,6 +27,7 @@ body {
   display: none;
 }
 
+
 a {
   text-decoration: none;
   -webkit-transition: 0.3s all ease;
@@ -233,6 +234,22 @@ a.more {
   background: #222222;
   border-color: #222222;
 }
+.cart {
+ 
+  border-radius: 60px !important;
+  
+  color: #000000 !important;
+  font-size: 20px !important;
+  background: #FFD814 !important;
+  padding: 10px 60px 10px 60px !important;
+  border: solid #FCD200 2px !important;
+  text-decoration: none !important;
+}
+
+.cart:hover {
+  background: #f0c800 !important;
+  text-decoration: none !important;
+}
 .btn:active,
 .btn:focus {
   outline: none !important;
@@ -268,6 +285,11 @@ a.more {
 
 .section-title {
   color: #2f2f2f;
+}
+
+#product-title{
+  font-size: 24px !important;
+  line-height: 32px !important;
 }
 
 .product-section {
