add order sections

--- a/ebay/Areas/Admin/Views/Product/Index.cshtml
+++ b/ebay/Areas/Admin/Views/Product/Index.cshtml
@@ -112,7 +112,7 @@
                                         <td class="w-25">
                                             
 
-                                            @Html.Raw(data.Description)
+                                            @Html.Raw(data.Description.Substring(0,120)+"...")
                                             
                                         </td>
                                             
