--- a/ebay/Views/Shared/_Layout.cshtml
+++ b/ebay/Views/Shared/_Layout.cshtml
@@ -14,13 +14,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dashboard - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
+    <title>BmazonX.com</title>
     <!-- CSS files -->
     <link href="/assets/dist/css/tabler.min.css?1684106062" rel="stylesheet" />
     <link href="/assets/dist/css/tabler-flags.min.css?1684106062" rel="stylesheet" />
     <link href="/assets/dist/css/tabler-payments.min.css?1684106062" rel="stylesheet" />
     <link href="/assets/dist/css/tabler-vendors.min.css?1684106062" rel="stylesheet" />
-    <link href="/assets/dist/css/demo.min.css?1684106062" rel="stylesheet" />    
+    <link href="/assets/dist/css/demo.min.css?1684106062" rel="stylesheet" />  
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">  
     
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <style>
