--- a/ebay/Areas/Public/Views/Cart/Index.cshtml
+++ b/ebay/Areas/Public/Views/Cart/Index.cshtml
@@ -8,7 +8,7 @@
 <form method="post">
     <br />
     <div class="card shadow border-0">
-        <div class="card-header bg-secondary bg-gradient text-light ml-0 py-4">
+        @* <div class="card-header bg-secondary bg-gradient text-light ml-0 py-4">
             <div class="row px-4">
                 <div class="col-6">
                     <h5 class="pt-2 text-white">
@@ -16,13 +16,13 @@
                     </h5>
                 </div>
             </div>
-        </div>
+        </div> *@
         <div class="card-body my-4">
             <div class="row">
             </div>
             <div class="row mb-3 pb-3">
                 <div class="col-md-2 offset-md-1">
-                    <a href="#" class="btn btn-outline-primary text-uppercase mb-5 btn-sm"><small>Continue
+                    <a  class="btn btn-outline-primary text-uppercase mb-5 btn-sm" asp-action="Index" asp-controller="Public"><small>Continue
                             Shopping</small></a>
                 </div>
                 @foreach (var data in Model.CartItemList)
@@ -51,17 +51,16 @@
                                 </div>
                                 <div class="col-6 col-sm-4 col-lg-6 pt-2">
                                     <div class="w-75 btn-group" role="group">
-                                        <a class="btn btn-outline-primary bg-gradient py-2">
+                                        <a class="btn btn-outline-primary bg-gradient py-2" asp-action="Add" asp-route-id="@data.id">
                                             <i class="bi bi-plus-square"></i>
                                         </a> &nbsp;
-                                        <a class="btn btn-outline-primary bg-gradient py-2">
+                                        <a class="btn btn-outline-primary bg-gradient py-2" asp-action="Minus" asp-route-id="@data.id">
                                             <i class="bi bi-dash-square"></i>
                                         </a>
                                     </div>
-
                                 </div>
                                 <div class="col-3 col-sm-4 col-lg-2 offset-lg-1 text-right pt-2">
-                                    <a href="#" class="btn btn-danger bg-gradient py-2 ">
+                                    <a class="btn btn-danger bg-gradient py-2 "  asp-action="Delete" asp-route-id="@data.id">
                                         <i class="bi bi-trash-fill"></i>
                                     </a>
                                 </div>
@@ -84,7 +83,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-2 offset-md-5">
-                        <a href="#" class="btn btn-primary border-0 bg-gradient w-100 py-2">Summary</a>
+                        <a class="btn btn-primary border-0 bg-gradient w-100 btn-sm py-2" asp-action="CheckOut" >Proceed to checkout</a>
                     </div>
                 </div>
             </div>
